# ZisaCMake

./: LICENSE  README.md  pyproject.toml
.github/workflows/: run_examples.yml
example/: CMakeLists.txt
example/src/: CMakeLists.txt  foo.cpp
example/tests/: CMakeLists.txt  test_foo.cpp  tests_main.cpp
src/zisa_cmake/: __init__.py  zisa_cmake.py
